--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ in Pakistan.
   </footer>
-  <script src="./index.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
